--- a/package.json
+++ b/package.json
@@ -6,20 +6,30 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postinstall": "symlink-dir node_modules/cesium/Build/Cesium public/cesium"
   },
   "dependencies": {
     "@types/node": "20.2.1",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
+    "cesium": "^1.105.2",
+    "copy-webpack-plugin": "^11.0.0",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.3",
+    "html-webpack-plugin": "^5.5.1",
+    "html-webpack-tags-plugin": "^3.0.2",
     "next": "13.4.3",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "resium": "^1.16.1",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4"
+  },
+  "devDependencies": {
+    "@types/css-modules": "^1.0.2",
+    "symlink-dir": "^5.1.1"
   }
 }
