--- a/package.json
+++ b/package.json
@@ -17,13 +17,13 @@
     "cesium": "^1.105.2",
     "copy-webpack-plugin": "^11.0.0",
     "eslint": "8.41.0",
-    "eslint-config-next": "13.4.3",
+    "eslint-config-next": "^14.2.4",
     "html-webpack-plugin": "^5.5.1",
     "html-webpack-tags-plugin": "^3.0.2",
-    "next": "13.4.3",
+    "next": "^14.2.4",
     "postcss": "8.4.23",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "resium": "^1.16.1",
     "satellite.js": "^5.0.0",
     "tailwindcss": "3.3.2",
