--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "html-webpack-plugin": "^5.5.1",
     "html-webpack-tags-plugin": "^3.0.2",
     "next": "^14.2.4",
-    "postcss": "8.4.23",
+    "postcss": "^8.4.39",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "resium": "^1.16.1",
